--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,3 +1,8 @@
 name: IncomeBuildings
 main: com.gmail.ZiomuuSs.IncomeBuildings
 version: 0.1
+commands:
+   IncomeBuildings:
+      aliases: [ib]
+      description: Glowna komenda.
+      usage: /ib
