--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-bin/plugin.yml
+bin
 .project
 .classpath
 .settings/org.eclipse.jdt.core.prefs
