Prototype of "info" command (only for OPs for now)

--- a/src/messages.yml
+++ b/src/messages.yml
@@ -19,3 +19,13 @@ error_permission: "Nie posiadasz odpowiednich uprawnien aby uzyc tej komendy!"
 error_no_region: "Region o nazwie %1 nie istnieje!"
 error_use: "Poprawne uzycie: %1"
 error_exist: "Budynek o takiej samej nazwie lub takim samym regionie juz istnieje!"
+error_no_building: "Budynek o nazwie %1 nie istnieje!"
+info_building_admin: "Informacje o budynku %1:"
+info_region: "Region: %1 (Swiat: %2)"
+info_next_income: "Kolejny przyplyw za %1 godzin %2 minut"
+info_account: "Konto: %1/%2"
+info_owner: "Wlasciciel: %1"
+
+#Simple messages
+#(Messages that are used instead of variables in some situations)
+none: "Brak"
